# VisualFinanceAgent

./: .gitignore  LICENSE  README.md  dev.ipynb  frontend.py  pipeline.py  pyproject.toml  query_utils.py  requirements.txt  test_query_utils.py
streamlit/: main.py
tests/image_summarizer/: image_summarizer_agent.py
tests/integration_tests/: conftest.py
tests/manager_agent/: manager.py  more_manager.py
tests/query_expansion/: query.py
visualfinanceagent/vectordb/: colpali_vectordb.py  groq_utils.py  main.py  summary_vectordb.py  utils.py
visualfinanceagent/vectordb/output_imgs_2/APAC_Tale of HK SAR _ SNG Report_short version_FINAL/JSON/: page_1.json  page_10.json  page_11.json  page_12.json  page_13.json  page_14.json  page_15.json  page_16.json  page_17.json  page_18.json  page_19.json  page_2.json  page_20.json  page_21.json  page_22.json  page_23.json  page_24.json  page_25.json  page_26.json  page_27.json  page_28.json  page_29.json  page_3.json  page_4.json  page_5.json  page_6.json  page_7.json  page_8.json  page_9.json
visualfinanceagent/vectordb/output_imgs_2/jll-asia-pacific-capital-tracker-3q23 (1)/JSON/: page_1.json  page_10.json  page_11.json  page_12.json  page_13.json  page_14.json  page_15.json  page_16.json  page_17.json  page_18.json  page_19.json  page_2.json  page_20.json  page_21.json  page_22.json  page_23.json  page_24.json  page_25.json  page_26.json  page_27.json  page_28.json  page_29.json  page_3.json  page_30.json  page_31.json  page_32.json  page_33.json  page_34.json  page_35.json  page_36.json  page_37.json  page_38.json  page_39.json  page_4.json  page_40.json  page_41.json  page_5.json  page_6.json  page_7.json  page_8.json  (+1 more)
